force-app/main/default/objects/sma__MASavedQryComponent__c/sma__MASavedQryComponent__c.object-meta.xml
<CustomObject>
    <label>MapAnything Saved Query Component</label>
    <nameField>
        <displayFormat>SQC{000000}</displayFormat>
        <label>Saved Query Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Saved Query Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>