force-app/main/default/objects/sma__MASavedQryComponent__c/fields/sma__CrossFilterLogic__c.field-meta.xml
<CustomField>
    <fullName>sma__CrossFilterLogic__c</fullName>
    <label>CrossFilterLogic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>