force-app/main/default/objects/sma__MASavedQryComponent__c/fields/sma__MASavedQry__c.field-meta.xml
<CustomField>
    <fullName>sma__MASavedQry__c</fullName>
    <label>Saved Query</label>
    <referenceTo>sma__MASavedQry__c</referenceTo>
    <relationshipLabel>MapAnything Saved Query Components</relationshipLabel>
    <relationshipName>Saved_Query_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>