force-app/main/default/objects/sma__MASavedQryComponent__c/fields/sma__Parent__c.field-meta.xml
<CustomField>
    <fullName>sma__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>sma__MASavedQryComponent__c</referenceTo>
    <relationshipLabel>MapAnything Saved Query Components</relationshipLabel>
    <relationshipName>MASavedQryComponents</relationshipName>
    <type>Lookup</type>
</CustomField>