force-app/main/default/objects/sma__MASavedQryComponent__c/fields/sma__ParentField__c.field-meta.xml
<CustomField>
    <fullName>sma__ParentField__c</fullName>
    <label>Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>